tests/compile_fail/invalid_strategy.stderr
error[E0271]: type mismatch resolving `<std::ops::Range<usize> as Strategy>::Value == u8`
 --> tests/compile_fail/invalid_strategy.rs:4:16
  |
4 |     #[strategy(0..10usize)]
  |                -^^^^^^^^^
  |                |
  |                expected `u8`, found `usize`
  |                required by a bound introduced by this call
  |
note: required by a bound in `_strategy_of_x`
 --> tests/compile_fail/invalid_strategy.rs:5:8
  |
2 | #[derive(Arbitrary, Debug)]
  |          --------- required by a bound in this
...
5 |     x: u8,
  |        ^^ required by this bound in `_strategy_of_x`
